--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dio: ^5.7.0
   intl: ^0.19.0
   webview_flutter: ^4.7.0
+  flutter_bloc: ^8.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
